macro(add_ngf_example NAME)
    add_executable("${NAME}" "${NAME}.cpp")
    target_link_libraries("${NAME}" ngf)
    install(TARGETS "${NAME}" DESTINATION "bin/examples")
endmacro()

install(DIRECTORY "assets" DESTINATION "bin/examples")

add_ngf_example(01_window)
add_ngf_example(02_inputs)
add_ngf_example(03_basic_drawing)
add_ngf_example(04_texture)
add_ngf_example(05_sprite)
add_ngf_example(06_sprite_anim)
add_ngf_example(07_text)
add_ngf_example(08_json)
add_ngf_example(09_tween)
add_ngf_example(10_pathfinding)
add_ngf_example(11_area)
