list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../cmake/SDL2")

find_package(Freetype REQUIRED)
find_package(SDL2 REQUIRED)

macro(add_ngf_example NAME)
    add_executable("${NAME}" "${NAME}.cpp")
    target_link_libraries("${NAME}" ngf ${FREETYPE_LIBRARIES} ${SDL2_LIBRARY})
    install(TARGETS "${NAME}" DESTINATION "bin/examples")
endmacro()

install(DIRECTORY "assets" DESTINATION "bin/examples")

add_ngf_example(01_window)
add_ngf_example(02_inputs)
add_ngf_example(03_basic_drawing)
add_ngf_example(04_texture)
add_ngf_example(05_sprite)
add_ngf_example(06_sprite_anim)
add_ngf_example(07_text)
add_ngf_example(08_json)
add_ngf_example(09_tween)
add_ngf_example(10_pathfinding)
add_ngf_example(11_area)
add_ngf_example(12_shapes)
add_ngf_example(13_render_texture)
add_ngf_example(14_audio)
